webhooks/stargz/deploy/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: stargz-runtime-injector
    control-plane: controller-manager
  name: pod-stargz-runtime-injector-controller-manager-metrics-service
  namespace: sealos-system
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/name: stargz-runtime-injector
    control-plane: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: stargz-runtime-injector
  name: pod-stargz-runtime-injector-webhook-service
  namespace: sealos-system
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/name: stargz-runtime-injector
    control-plane: controller-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: stargz-runtime-injector
    control-plane: controller-manager
  name: pod-stargz-runtime-injector-controller-manager
  namespace: sealos-system
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: stargz-runtime-injector
      control-plane: controller-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
        stargz.sealos.io/skip: "true"
      labels:
        app.kubernetes.io/name: stargz-runtime-injector
        control-plane: controller-manager
    spec:
      containers:
      - args:
        - --metrics-bind-address=:8443
        - --leader-elect
        - --health-probe-bind-address=:8081
        - --runtime-class=stargz
        - --registries=<REGISTRY_URL>
        - --skip-annotation=stargz.sealos.io/skip
        command:
        - /stargz-webhook
        image: ghcr.io/labring/sealos/stargz-webhook:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tls
          name: cert
          readOnly: true
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: pod-stargz-runtime-injector-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: sealos-system/pod-stargz-runtime-injector-serving-cert
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: stargz-runtime-injector
  name: pod-stargz-runtime-injector-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: pod-stargz-runtime-injector-webhook-service
      namespace: sealos-system
      path: /mutate
      port: 443
  failurePolicy: Ignore
  name: pod-stargz-runtime-injector.sealos.io
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
  timeoutSeconds: 5
